@@ -758,7 +758,9 @@ OBJECT-ORIENTED INTERFACE
         The "TO_JSON" method may safely call die if it wants. If "TO_JSON"
         returns other blessed objects, those will be handled in the same
         way. "TO_JSON" must take care of not causing an endless recursion
-        cycle (== crash) in this case. The name of "TO_JSON" was chosen
+        cycle (== crash) in this case. The same care must be taken with
+        calling encode in stringify overloads (even if this works by luck in
+        older perls) or other callbacks. The name of "TO_JSON" was chosen
         because other methods called by the Perl core (== not by the user of
         the object) are usually in upper case letters and to avoid
         collisions with any "to_json" function or method.
